cmd/pint/tests/0027_ci_branch.txt
mkdir testrepo
cd testrepo
exec git init --initial-branch=main .

cp ../src/v1.yml rules.yml
cp ../src/.pint.hcl .
env GIT_AUTHOR_NAME=pint
env GIT_AUTHOR_EMAIL=pint@example.com
env GIT_COMMITTER_NAME=pint
env GIT_COMMITTER_EMAIL=pint@example.com
exec git add .
exec git commit -am 'import rules and config'

exec git checkout -b v2
cp ../src/v2.yml rules.yml
exec git commit -am 'v2'

! exec pint --no-color ci
! stdout .
cmp stderr ../stderr.txt

-- stderr.txt --
level=INFO msg="Loading configuration file" path=.pint.hcl
level=INFO msg="Finding all rules to check on current git branch" base=main
level=INFO msg="Checking Prometheus rules" entries=2 workers=10 online=true
level=INFO msg="Problems found" Fatal=1
Fatal: PromQL syntax error (promql/syntax)
  ---> rules.yml:2
2 |   expr: sum(foo) bi(job)
                     ^^ unexpected identifier "bi"

level=ERROR msg="Execution completed with error(s)" err="problems found"
-- src/v1.yml --
- record: rule1
  expr: sum(foo) by(job)
- record: rule2
  expr: sum(foo) bi(job)

-- src/v2.yml --
- record: rule1
  expr: sum(foo) bi(job)
- record: rule2
  expr: sum(foo) bi(job)

-- src/.pint.hcl --
ci {
  baseBranch = "main"
}
parser {
  relaxed = [".*"]
}
